<resources>
    <string name="app_name">JV</string>
    <string name="categorie_1">Jeux</string>
    <string name="categorie_2">Art et Culture</string>
    <string name="categorie_3">Bonnes affaires</string>
    <string name="categorie_4">Sport</string>
    <string name="categorie_5">Categorie 5</string>
    <string name="categorie_6">Categorie 6</string>
    <string name="txt_aujourd_hui">Aujourd\'hui</string>
    <string name="txt_dans_la_semaine">Dans la semaine</string>
    <string name="txt_plus_tard">Plus tard</string>
    <string name="mail_contact">contact.ademelo@gmail.com</string>
    <string name="email_orga">contact_organisation@asso.fr</string>
    <string name="phone_number">06 06 06 06 06</string>
    <string name="mailto_mail_asso">mailto:contact.ademelo@gmail.com</string>
    <string name="mail_to_orga_asso">mailto:contact_organisation@asso.fr</string>
    <string name="sujet_mail_asso">Contact JV</string>
    <string name="sujet_mail_orga_asso">Demande d\'enregistrement d\'une sortie que j\'organise</string>
    <string name="sujet_mail_demande_renseignements">Demande de renseignements</string>
    <string name="some_text">Du texte</string>
    <string name="txt_debut_txt_horaire">A :</string>
    <string name="txt_debut_txt_dates">Le</string>
    <string name="txt_ici_le_chapo">Ici le chapo</string>
    <string name="txt_ici_le_contenu_de_l_article">Ici le contenu de l\'article</string>
    <string name="txt_ici_le_contenu_de_l_adresse">ici_le_contenu_de_l_adresse</string>
    <string name="txt_erreur_accueil_aucune_categ_sélectionnée">Au moins une catégorie doit être sélectionnée</string>
    <string name="url_site_web">www.google.fr</string>
    <string name="url_facebook">www.facebook.fr</string>
    <string name="adr_non_connue">non connue</string>
    <string name="tel_non_connu">non connu</string>
    <string name="url_twitter">www.twitter.fr</string>
    <string name="categ_non_connue">non connu</string>
    <string name="txt_ici_s_affichera_l_email">ici s\'affichera l\'email</string>
    <string name="txt_pour_plus_d_options">Pour plus d\'options, sélectionnez la destination et appuyez sur la flèche en bas à droite de l\'écran</string>
    <string name="contentD_picto_distance">picto distance</string>
    <string name="contentD_picto_temps">picto_temps</string>
    <string name="txt_zero_km">0 km</string>
    <string name="txt_zero_minute">0 min</string>
    <string name="contentD_picto_voiture">picto voiture</string>
    <string name="txt_plus_d_infos">Plus d\'infos :</string>
    <string name="btn_contact_orga">Organisateur ? Contactez-nous !</string>
    <string name="titre_article">Titre article</string>
    <string name="titre_contact">Contactez-nous !</string>
    <string name="titre_choix_par_mot_cle">Mots clés</string>
    <string name="titre_choix_par_age">par age</string>
    <string name="titre_1">Titre 1</string>
    <string name="liste_1">Vos sorties du jour : </string>
    <string name="liste_2">Liste 2</string>
    <string name="titre_page_article_par_categ">Sorties pour la categorie sélectionnée</string>
    <string name="lbl_prix">Prix :</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="txt_enter_origin_adress">Enter origin address</string>
    <string name="txt_enter_destination_adress">Enter destination address</string>
    <string name="btn_connection">Connexion</string>
    <string name="btn_inscription">Inscription</string>
    <string name="btn_log_out">Log out</string>
    <string name="btn_modif_profil">Modifier le profil</string>
    <string name="btn_modif_mdp">Modifier Mot de passe</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_annuler">Annuler</string>
    <string name="pseudo">Pseudo</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">E-mail</string>
    <string name="txt_mdp_cache">*****</string>
    <string name="txt_pseudo_pour_debug">Champ qui affiche le pseudo</string>
    <string name="txt_email_pour_debug">Champ qui affiche l\'email</string>
    <string name="txt_tel_pour_debug">Champ qui affiche le téléphone</string>
    <string name="titre_modif_profil">Modifiez votre profil</string>
    <string name="titre_connexion">Connectez vous à votre compte !</string>
    <string name="titre_centres_interet">Choisissez vos centres d\'intérêt</string>
    <string name="btn_next">Suivant</string>
    <string name="lbl_entrer_pseudo">Entrez votre nom ou pseudo</string>
    <string name="lbl_entrer_email">Entrez votre e-mail</string>
    <string name="lbl_verif_email">Vérification</string>
    <string name="lbl_entrer_mdp">Entrez votre mot de passe</string>
    <string name="lbl_verif_mdp">Vérification</string>
    <string name="lbl_pref">Préférences</string>
    <string name="lbl_ancien_mot_de_passe">Ancien mot de passe</string>
    <string name="lbl_nouveau_mot_de_passe">Entrer nouveau mot de passe</string>
    <string name="lbl_verif_nouveau_mot_de_passe">Vérification</string>
    <string name="txt_info_pseudo_deja_pris">Ce pseudo est déjà utilisé, merci d\'en choisir un autre !</string>
    <string name="txt_info_egalite_2_email">Les 2 e-mails doivent être identiques</string>
    <string name="txt_info_demande_verif_email">Merci de vérifier l\'email</string>
    <string name="txt_info_email_existe_se_connecter">Cet e-mail est déjà enregistré, essayez de vous connecter !</string>
    <string name="txt_info_egalite_2_mdp">Les 2 nouveaux mots de passe doivent être identiques</string>
    <string name="txt_info_format_mdp">Le mot de passe doit :  - avoir entre 8 et 20 caractères -au moins 1 lettre -au moins 1 chiffre</string>
    <string name="txt_info_au_moins_1_categ">Merci de sélectionner au moins 1 catégorie.</string>
    <string name="txt_confirm_mdp_modifié">Le mot de passe a bien été modifié !</string>
    <string name="txt_ancien_mdp_incorrect">L\'ancien mot de passe est incorrect</string>
    <string name="txt_info_profil_modifie">Profil modifié</string>
    <string name="txt_telephone">Téléphone</string>
    <string name="lbl_entrer_telephone">Entrez votre numéro de téléphone</string>
    <string name="txt_info_utilisation_num_tel">Votre numéro de téléphone servira lors des jeux concours que nous organiseront !</string>
    <string name="facultatif">(facultatif)</string>
</resources>
