<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dominique.fr.jv_activity.Fragment_Inscription_etape4"
    android:orientation="vertical">

    <TextView
        style="@style/Titre_page_bleu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_entrer_telephone"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_telephone"
                style="@style/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_telephone"
                tools:ignore="NestedWeights" />

            <EditText
                style="@style/txt_dans_EditText"
                android:id="@+id/et_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/facultatif"
                android:inputType="phone"
                 />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txt_verif_new_mdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/txt_info_utilisation_num_tel"
                tools:ignore="NestedWeights" />


        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_horizontal">

        <ImageButton
            style="@style/bouton_bleu"
            android:id="@+id/btn_previous_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_undo_black_24dp"
            android:onClick="goPreviousFromStep4"
            />

        <Button
            style="@style/bouton_bleu"
            android:id="@+id/btn_next_step3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btn_previous_step3"
            android:text="@string/btn_next"
            android:onClick="goStep5"

            />

    </RelativeLayout>

</LinearLayout>
