<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dominique.fr.jv_activity.DetailArticle">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:id="@+id/tv_titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Titre"
                style="@style/Titre_page_rouge_orange"/>
            <LinearLayout
                android:id="@+id/ll_place_mots_cle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_place_infos_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_aff_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/txt_noir_gras_xl"
                    android:text="@string/txt_debut_txt_dates"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_place_infos_horaires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/tv_aff_horaires"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/txt_noir_gras"
                    android:text="@string/txt_debut_txt_horaire"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">
                    <TextView
                        android:id="@+id/tv_aff_prix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/txt_noir_gras"
                        android:text="@string/lbl_prix" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_aff_adresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ici_le_contenu_de_l_adresse"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/tv_aff_chapo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ici_le_chapo"
                android:layout_marginBottom="20dp"
                android:lineSpacingExtra="25dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_plus_d_infos"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:id="@+id/imgBtn_youtube"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_youtube_txt"
                        tools:ignore="VectorDrawableCompat"
                        android:onClick="clicSurYoutube"/>
                    <ImageButton
                        android:id="@+id/imgBtn_pdf"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_pdf"
                        tools:ignore="VectorDrawableCompat"
                        android:onClick="clicSurPdf"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_aff_contenu"
                android:textColor="@color/noir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ici_le_contenu_de_l_article"
                android:layout_marginBottom="25dp"
                android:lineSpacingExtra="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:elevation="@dimen/ombre_cardView">
                    <ImageButton
                        android:id="@+id/imgBtn_map"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_location_on_red_24dp"
                        android:onClick="clicSurMap"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:elevation="@dimen/ombre_cardView"
                    android:layout_gravity="center"
                    >
                    <ImageButton
                        android:id="@+id/imgBtn_mail"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_email_red_35dp"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:elevation="@dimen/ombre_cardView"
                    >
                    <ImageButton
                        android:id="@+id/imgBtn_appel"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_phone_red_30dp"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:elevation="@dimen/ombre_cardView">
                    <ImageButton
                        android:id="@+id/imgBtn_facebook_event"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_facebook_red_30dp"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:elevation="@dimen/ombre_cardView">
                    <ImageButton
                        android:id="@+id/imgBtn_twitter_event"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_twitter_30dp"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:elevation="@dimen/ombre_cardView">
                    <ImageButton
                        android:id="@+id/imgBtn_site_web_event"
                        style="@style/imgBtn_fond_blanc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_icon_www_30dp" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <ImageView
                android:id="@+id/img_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/jv"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>